# rust_basics

./: Cargo.toml
src/: add.rhai  async-await.rs  call-api.rs  download-image.rs  extract-links  multiply.rhai  rhai-actix.rs
