[package]
name = "rust_basics"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
error-chain = "0.12.4"
tokio = {version = "1", features = ["full"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
tempfile = "3.3.0"
select="0.5.0"
actix-web = "4.0.1"
rhai = "1.6.1"